--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
+    "moment": "^2.30.1",
     "next": "^15.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
